--- a/admin22.html
+++ b/admin22.html
@@ -1,106 +1,119 @@
+<!-- Dynamic Admin Panel Template -->
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Crunchyroll Premium BD - Admin Controlled</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Panel - Crunchyroll Premium BD</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    :root {
-      --primary-color: #007bff;
-      --secondary-color: #f2f2f2;
-    }
     body {
-      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: var(--secondary-color);
-      color: #000;
-    }
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 15px;
-    }
-    .banner {
-      width: 100%;
-      border-radius: 8px;
-    }
-    .desc {
-      text-align: center;
-      font-size: 18px;
-      margin: 20px 0;
-    }
-    .buy-now-btn {
-      background: var(--primary-color);
-      color: white;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      padding: 12px 24px;
-      cursor: pointer;
-      display: block;
-      margin: 20px auto;
-    }
-    .custom-section {
-      background: white;
+      margin: 0;
+      background: #f5f5f5;
       padding: 20px;
-      border-radius: 12px;
-      margin-top: 30px;
     }
-    .custom-section h3 {
-      margin-top: 0;
+    h2 {
+      color: #333;
+    }
+    .section {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+    input, textarea, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+    button {
+      background: #007bff;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
     }
   </style>
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <div class="container">
-    <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" alt="Banner">
-    <div class="desc" id="websiteDescription">লোড হচ্ছে...</div>
-    <button class="buy-now-btn" onclick="alert('Package Page Loading...')">BUY NOW</button>
+  <h2>📋 Admin Panel - Dynamic Features Control</h2>
 
-    <!-- Optional Custom Feature Sections -->
-    <div id="customFeatures"></div>
+  <div class="section">
+    <h3>📝 Website Description</h3>
+    <textarea id="description" rows="4"></textarea>
+    <button onclick="saveDescription()">Save Description</button>
   </div>
+
+  <div class="section">
+    <h3>🎨 Site Styling</h3>
+    <label>Primary Color</label>
+    <input type="color" id="primaryColor">
+    <label>Secondary Color</label>
+    <input type="color" id="secondaryColor">
+    <button onclick="saveStyles()">Save Colors</button>
+  </div>
+
+  <div class="section">
+    <h3>🧩 Add Custom Feature / Section</h3>
+    <label>Section Title</label>
+    <input id="featureTitle" type="text">
+    <label>Section Content (HTML allowed)</label>
+    <textarea id="featureContent" rows="5"></textarea>
+    <label>Show in Page</label>
+    <select id="featurePage">
+      <option value="mainPage">Home Page</option>
+      <option value="packagePage">Package Page</option>
+      <option value="checkoutPage">Checkout Page</option>
+    </select>
+    <button onclick="addFeature()">Add Feature</button>
+  </div>
+
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop",
+      apiKey: 'AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4',
+      authDomain: 'crunchyrollpremiumbd-shop.firebaseapp.com',
+      projectId: 'crunchyrollpremiumbd-shop',
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    async function loadSettings() {
-      try {
-        const doc = await db.collection('settings').doc('main').get();
-        if (doc.exists) {
-          const data = doc.data();
-          document.getElementById('websiteDescription').innerText = data.description || 'ডেসক্রিপশন পাওয়া যায়নি';
-          document.documentElement.style.setProperty('--primary-color', data.primaryColor || '#007bff');
-          document.documentElement.style.setProperty('--secondary-color', data.secondaryColor || '#f2f2f2');
-
-          // Load Custom Feature Sections
-          const features = data.features || [];
-          const featureDiv = document.getElementById('customFeatures');
-          features.forEach(feature => {
-            const section = document.createElement('div');
-            section.className = 'custom-section';
-            section.innerHTML = `<h3>${feature.title}</h3><p>${feature.content}</p>`;
-            featureDiv.appendChild(section);
-          });
-        } else {
-          document.getElementById('websiteDescription').innerText = 'কোন সেটিংস পাওয়া যায়নি';
-        }
-      } catch (err) {
-        console.error('লোড সমস্যা:', err);
-        document.getElementById('websiteDescription').innerText = 'সার্ভার সমস্যা হয়েছে';
-      }
+    function saveDescription() {
+      const desc = document.getElementById('description').value;
+      db.collection('siteContent').doc('main').set({ description: desc }, { merge: true });
+      alert('✅ Description Updated');
     }
 
-    window.onload = loadSettings;
+    function saveStyles() {
+      const primary = document.getElementById('primaryColor').value;
+      const secondary = document.getElementById('secondaryColor').value;
+      db.collection('siteContent').doc('style').set({ primary, secondary }, { merge: true });
+      alert('🎨 Colors Updated');
+    }
+
+    function addFeature() {
+      const title = document.getElementById('featureTitle').value;
+      const content = document.getElementById('featureContent').value;
+      const page = document.getElementById('featurePage').value;
+      const feature = { title, content, page, createdAt: new Date() };
+      db.collection('features').add(feature);
+      alert('🧩 Feature Added');
+      document.getElementById('featureTitle').value = '';
+      document.getElementById('featureContent').value = '';
+    }
   </script>
 </body>
 </html>
